--- a/doc/01. description.md
+++ b/doc/01. description.md
@@ -4,45 +4,45 @@
 
 #####  [Order now](https://puqcloud.com/whmcs-module-docker-n8n.php) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-Docker-n8n/) | [FAQ](https://faq.puqcloud.com/) | [n8n](https://puqcloud.com/link.php?id=117)
 
-<p class="callout info">Before you start, it is important to read and familiarize yourself with the following articles at this link:  
-[https://doc.puq.info/books/docker-modules](https://doc.puq.info/books/docker-modules)</p>
+>Before you start, it is important to read and familiarize yourself with the following articles at this link:  
+[https://doc.puq.info/books/docker-modules](https://doc.puq.info/books/docker-modules)
 
 The **WHMCS Docker n8n module** is designed for automated provisioning and management of n8n instances on a Docker server. It seamlessly integrates with WHMCS, allowing businesses to sell and manage n8n services efficiently.
 
 - - - - - -
 
-## **Key Features**
+## Key Features
 
-### **🚀 Automated Container Management**
+### Automated Container Management
 
 - Automatic creation of an n8n container upon service order.
 - Automated package upgrades and administrator password reset.
 
-### **🔒 Service Control &amp; Security**
+### Service Control &amp; Security
 
 - Service suspension and reactivation.
 - Full termination of services when needed.
 
-### **🛠️ Advanced Diagnostic Tools**
+### Advanced Diagnostic Tools
 
 - Built-in tools for diagnosing and managing containers.
 
-### **🌍 Multilingual Support**
+### Multilingual Support
 
 - Supports multiple languages, including **Arabic, Azerbaijani, Catalan, Chinese, Croatian, Czech, Danish, Dutch, English, Estonian, Farsi, French, German, Hebrew, Hungarian, Italian, Macedonian, Norwegian, Polish, Romanian, Russian, Spanish, Swedish, Turkish, and Ukrainian**.
 
-### **⚙️ Fully Customizable Workflows**
+### Fully Customizable Workflows
 
 - Uses **n8n workflows** to automate processes, allowing full customization for business-specific needs.
 
 - - - - - -
 
-## **System Requirements**
+## System Requirements
 
 To run the WHMCS Docker n8n module, ensure you have:  
-✅ **WHMCS version 8+**  
-✅ **An n8n server** for workflow automation  
-✅ **A server with Docker installed** for container management
+- WHMCS version 8+
+- **An n8n server** for workflow automation  
+- **A server with Docker installed** for container management
 
 - - - - - -
 
