--- a/doc/02. what-is-n8n.md
+++ b/doc/02. what-is-n8n.md
@@ -6,7 +6,7 @@
 
 **n8n** is an open-source, workflow automation platform designed to simplify and streamline processes by integrating different services, APIs, and applications. It provides an intuitive and customizable way to automate repetitive tasks, connect systems, and create complex workflows without writing a single line of code.
 
-#### Key Features of n8n:
+### Key Features of n8n:
 
 1. **Open-Source and Self-Hosted**  
     One of the standout features of n8n is that it is completely open-source. This means that you have full control over your workflows and data. You can host n8n on your own servers or use it in cloud environments, ensuring maximum flexibility and customization to fit your business needs.
@@ -25,13 +25,13 @@
 8. **Extensible with Custom Nodes**  
     One of n8n's greatest strengths is its extensibility. If the integrations you need aren’t available out of the box, you can easily create your own custom nodes using JavaScript. This makes n8n adaptable to almost any business need, no matter how niche.
 
-#### Why Choose n8n?
+### Why Choose n8n?
 
 n8n stands out in the world of workflow automation because it offers a powerful and flexible solution that is both user-friendly and highly customizable. As an open-source tool, n8n provides a level of control and privacy that is hard to find in many commercial automation platforms. Its extensive integrations, scalability, and easy-to-use interface make it suitable for businesses of all sizes, from startups to large enterprises.
 
 Moreover, n8n’s self-hosting option means that you can have full control over your automations, ensuring that your sensitive data stays within your network, which is crucial for businesses with privacy concerns.
 
-#### Use Cases for n8n
+### Use Cases for n8n
 
 n8n can be used across various industries and use cases, such as:
 
@@ -41,6 +41,6 @@ n8n can be used across various industries and use cases, such as:
 - **Custom Workflows**: Build and automate workflows specific to your business, such as custom notifications, alerts, and reporting systems.
 - **Customer Communication**: Automate email, SMS, or chat notifications to improve customer engagement.
 
-#### Conclusion
+### Conclusion
 
 n8n provides a flexible, powerful, and open-source alternative to commercial workflow automation platforms. With its user-friendly interface, broad integration options, and robust logic capabilities, it enables users to automate tasks across various applications with minimal effort. Whether you need simple automations or complex, multi-step workflows, n8n offers an easy way to automate, save time, and increase efficiency within your business.
