--- a/doc/01. description.md
+++ b/doc/01. description.md
@@ -48,23 +48,23 @@ To run the WHMCS Docker n8n module, ensure you have:
 
 ## **Installation &amp; Setup**
 
-### **1️⃣ Environment Preparation**
+### ** Environment Preparation**
 
 - Install **WHMCS 8+**.
 - Set up an **n8n server** for automation workflows.
 - Ensure **Docker** is installed and running.
 
-### **2️⃣ Module Installation**
+### ** Module Installation**
 
 - Upload and activate the **WHMCS Docker n8n module**.
 - Configure the module settings to connect with your Docker server and n8n workflows.
 
-### **3️⃣ Workflow Customization**
+### ** Workflow Customization**
 
 - Utilize **n8n workflows** to automate service provisioning and management.
 - Modify workflows as needed for custom business logic.
 
-### **4️⃣ Testing &amp; Deployment**
+### ** Testing & Deployment**
 
 - Perform a **test order** to verify automatic container creation.
 - Check all service management functions (suspension, unlocking, termination).
@@ -73,13 +73,13 @@ To run the WHMCS Docker n8n module, ensure you have:
 
 ## **Why Choose This Module?**
 
-✅ **Seamless automation** – Reduces manual work and speeds up service deployment.  
-✅ **Highly customizable** – Modify workflows to fit any business model.  
-✅ **User-friendly** – Integrated within WHMCS with a simple setup process.
+- **Seamless automation** – Reduces manual work and speeds up service deployment.  
+- **Highly customizable** – Modify workflows to fit any business model.  
+- **User-friendly** – Integrated within WHMCS with a simple setup process.
 
 - - - - - -
 
-This module makes selling and managing **n8n instances** through WHMCS easy, automated, and flexible! 🚀
+This module makes selling and managing **n8n instances** through WHMCS easy, automated, and flexible! 
 
 [![image-1741197788478.png](https://doc.puq.info/uploads/images/gallery/2025-03/scaled-1680-/image-1741197788478.png)](https://doc.puq.info/uploads/images/gallery/2025-03/image-1741197788478.png)
 
