--- a/doc/04. Installation and configuration guide/04. setting-up-n8n-workflow.md
+++ b/doc/04. Installation and configuration guide/04. setting-up-n8n-workflow.md
@@ -19,12 +19,12 @@ The **Docker n8n WHMCS module** uses a specially designed workflow for **n8n** t
 
 You have two options:
 
-#### **Option 1: Use the Latest Version from the n8n Marketplace**
+##### **Option 1: Use the Latest Version from the n8n Marketplace**
 
 - The latest workflow templates for our modules are available on the official n8n marketplace.
 - Visit our profile to access all available templates: [PUQcloud on n8n](https://n8n.io/creators/puqcloud/)
 
-#### **Option 2: Manual Installation**
+##### **Option 2: Manual Installation**
 
 - Each module version comes with a workflow template file.  
     [![image-1741970282211.png](https://doc.puq.info/uploads/images/gallery/2025-03/scaled-1680-/image-1741970282211.png)](https://doc.puq.info/uploads/images/gallery/2025-03/image-1741970282211.png)
