--- a/doc/04. Installation and configuration guide/06. product-configuration.md
+++ b/doc/04. Installation and configuration guide/06. product-configuration.md
@@ -4,7 +4,7 @@
 
 #####  [Order now](https://puqcloud.com/whmcs-module-docker-n8n.php) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-Docker-n8n/) | [FAQ](https://faq.puqcloud.com/) | [n8n](https://puqcloud.com/link.php?id=117)
 
-##### Add new product to WHMCS
+### Add new product to WHMCS
 
 ```
 System Settings->Products/Services->Create a New Product
@@ -22,13 +22,11 @@ In the **Module settings** section, select the **"PUQ Docker n8n"** module
 - **Main domain** – defines the primary domain for the web interface of the application. If not set, the main domain will be taken from the **hostname** parameter in the server settings.
 - **Subdomain** – a personal subdomain assigned to each service. If left empty or if the subdomain is already taken, it will be automatically generated in the format **{user\_id}-{service\_id}**.
 - ### Supported Macros for **App Subdomain**:
-    
-    
     - **{user\_id}** – Client ID
     - **{service\_id}** – Service ID
     - **{random\_digit\_x}** – Random number (x defines the length)
     - **{random\_letter\_x}** – Random letter (x defines the length)
     - **{unixtime}** – Unix timestamp
-    - **{year}, {month}, {day}, {hour}, {minute}, {second}** – Date and time values <div><div></div></div>
+    - **{year}, {month}, {day}, {hour}, {minute}, {second}** – Date and time values 
 - **Notification, used disk space X %** – The percentage value that sets the threshold for the container's disk space usage will trigger a notification message to the client once the threshold is reached.
 - **Notification disk limit email template** – The email template for the notification that will be sent when the threshold is reached.
